# fsdl-megatron

./: README.md  pyproject.toml
fsdl/: column_linear.py  mpu.py
tests/: test_mpu.py
