[tool.poetry]
name = "fsdl"
version = "0.1.0"
description = ""
authors = ["xrsrke <hello@xrs.wtf>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
numpy = "^1.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
